# dateutils

./: .drone.yml  .gitignore  .gitlab-ci.yml  .travis.yml  GNUmakefile  INSTALL  LICENSE  Makefile.am  README  README.md  _config.yml  binaries.md  changelog.md  configure.ac  distrib.md  git-version-gen  iata.tzmap  icao.tzmap  index.html  index.md  libdudcore.pc.in  libdudtcore.pc.in  libdut.pc.in  libdutcore.pc.in  make-changelog.sed  make-changelog.sh  mic.tzmap  sitemap.xml  tzmaps.md  version.mk.in
_layouts/: default.html  project.html  subpage.html
build-aux/: Makefile.am  git-version-gen  snarf-iata.sh  yuck-coru.c.m4  yuck-coru.h.m4  yuck-coru.m4c  yuck-scmver.c  yuck-scmver.h  yuck-scmver.m4  yuck.am  yuck.c  yuck.m4  yuck.m4man  yuck.man.m4  yuck.mk  yuck.yuck
contrib/: Makefile.am  tzconv.c  tzconv.m
data/: Makefile.am  locale  snarf-ummulqura.R  ummulqura.tab
info/: Makefile.am  author.h2m  dadd.name  datetools.texi  dateutils.man  dateutils.texi  dcal.texi  dconv.name  ddiff.name  dgrep.name  dround.name  dseq.name  dseq.texi  dtest.name  dtest.texi  dzone.name  format-ddiff.texi  format.h2m  format.texi  genex  genh2m.sh  gentexi.sh  locale.texi  strptime.name  strptime.texi  texi2h2m.sh  units.texi  zone.texi
lib/: Makefile.am  bizda.c  boobs.h  boops.h  daisy.c  date-core-private.h  date-core-strpf.c  date-core-strpf.h  date-core.c  date-core.h  dt-core-private.h  dt-core-strpf.c  dt-core-strpf.h  dt-core-tz-glue.c  dt-core-tz-glue.h  dt-core.c  dt-core.h  dt-locale.c  dt-locale.h  fmt-special.gperf  generics.h  gmtime.h  iata.tzminfo  icao.tzminfo  leap-seconds.def  leap-seconds.h  leaps.c  leaps.h  leapseconds.h  locale.c  ltrcc.c  ltrcc.yuck  mic.tzminfo  nifty.h  strops.c  strops.h  testlib.c  time-core-private.h  time-core-strpf.c  time-core-strpf.h  (+16 more)
m4/: ax_zoneinfo.m4  clitosis.m4  git_version_magic.m4  sxe-aux.m4  sxe-compiler.m4  sxe-libtool.m4  sxe-linker.m4  sxe-matlab.m4  sxe-mmap.m4  yuck.m4
scripts/: snarf-geonames.sh
sql/: mic-tzmap.sql
src/: Makefile.am  __gengetopt-mularg.h  __gengetopt-mularg.sed  alist.c  alist.h  common.ggo.in  dadd-clo.ggo  dadd.c  dadd.yuck  date-io.h  dcal-clo.ggo  dcal-clo.ggop  dcal.c  dconv-clo.ggo  dconv.c  dconv.yuck  ddiff-clo.ggo  ddiff.c  ddiff.ggo  ddiff.yuck  dexpr-parser.wrap.c  dexpr-parser.y  dexpr-scanner.l  dexpr-scanner.wrap.c  dexpr.c  dexpr.h  dgrep-clo.ggo  dgrep.c  dgrep.ggo  dgrep.yuck  dround-clo.ggo  dround.c  dround.ggo  dround.yuck  dseq-clo.ggo  dseq.c  dseq.ggo  dseq.yuck  dsort.c  dsort.yuck  (+36 more)
test/: Makefile.am  add.yd-1d.clit  add.yd-1d.ctst  add.yd-1w.clit  add.yd-1w.ctst  add.yd-1y.clit  add.yd-1y.ctst  add.ymcw-1d.clit  add.ymcw-1d.ctst  add.ymcw-1w.clit  add.ymcw-1w.ctst  add.ymcw-1y.clit  add.ymcw-1y.ctst  add.ymd-1d.clit  add.ymd-1d.ctst  add.ymd-1w.clit  add.ymd-1w.ctst  add.ymd-1y.clit  add.ymd-1y.ctst  add.ywd-1d.clit  add.ywd-1d.ctst  add.ywd-1w.clit  add.ywd-1w.ctst  add.ywd-1y.clit  add.ywd-1y.ctst  basic_get_dom_wday.c  basic_get_jan01_wday.c  basic_md_get_yday.c  basic_ymd_get_wday.c  caev_01.txt  caev_02.txt  clitoris.c  clitoris.ggo  clitosis.am  clitosis.c  clitosis.yuck  clittool.c  clittool.yuck  convt.yd-ymcw.clit  convt.yd-ymcw.ctst  (+2261 more)
